@@ -1,3 +1,7 @@
+30/11/2018:
+	- Added maxWidth and maxHeight IIIF API 2.1 directives to info.json.
+
+
 13/11/2018:
 	- Converted RawTile dataLength variable to unsigned to improve overflow
 	  avoidance as per https://github.com/ruven/iipsrv/pull/156
